Updated interfaces, Rampable vehicles, WorkShop collision and images